Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

Version 0.4
-----------

Not released yet.

- Added ``collection_name`` keyword argument to constructor of
  :class:`~flask.ext.restless.manager.APIManager` to allow user provided names
  in URLs.
- Added ``allow_patch_many`` keyword argument to constructor of
  :class:`~flask.ext.restless.manager.APIManager` to allow enabling or
  disabling the PATCH many functionality.
- Disable the PATCH many functionality by default.

Version 0.3
-----------

Released on March 4, 2012.

- Initial release in Flask extension format.