@@ -8,6 +8,8 @@ Version 0.4
 
 Not released yet.
 
+- Fixed bug where we weren't allowing PUT requests in
+  :meth:`~flask.ext.restless.manager.APIManager.create_api`.
 - Added ``collection_name`` keyword argument to constructor of
   :class:`~flask.ext.restless.manager.APIManager` to allow user provided names
   in URLs.
